--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Random Number Game</title>
+    <title>Mini Games</title>
     <link rel ='stylesheet' type='text/css' href='style.css'>
     <meta charset="UTF-8" />
   </head>
 
   <body>
-    <form id="rangeForm">
-      <h1>Random Number Game</h1>
-      <h2>Generate a number between 0 and <input class="rangeInput" min="0" type="number" /></h2>
-    </form>
-
-    <form id="userForm">
-      <h3>Guess the number : <input type="number" class="userInput" min="0" />
-         <input type="submit" value="play!"/></h3>
-  
-    </form>
-    <p class="result"></p>
-    <!-- <img class="gameImg" src="img/game.jpg"/> -->
+    <div>
+      <p class="miniGame">Mini Games</p>
+    </div>
+    <a href="number.html"><img src="img/game.jpg"></a>
     <script src="app.js"></script>
   </body>
 </html>
